# puppykit

./: Dockerfile  README.md  contact.html  gif_to_text.js  httpd.conf  index.html  main.py  nav.html  nav.js  personal.html  professional.html  projects.html  puppykit.conf  puppykit.org.uk  pyproject.toml  rpg_data.json  setup_db.py  style.css  update.sh
.well-known/matrix/: server
contact/: index.html
files/: empyrean.ods
personal/: index.html
personal/rpgs/: index.html
professional/: index.html
project/: marked_for_death.html
projects/: index.html
projects/accalia/: index.html
projects/boardgame/: index.html
projects/elcm/: index.html
projects/empyrean/: index.html
projects/marked_for_death/: index.html
projects/packmates/: index.html
projects/runners/: index.html
static/css/: style.css
static/js/: gif_to_text.js  nav.js  rpg_search.js
system/: puppykit.org.uk  puppykit.service  start_site.sh  update.sh  update_site.sh
templates/: blogs.html  contact.html  core.html  fiction.html  personal.html  professional.html  projects.html  root.html
templates/blog/: site_setup.html
templates/error/: 404.html  500.html
templates/fiction/: accalia.html  landthought.html  tippingpoint.html  uprightdevotion.html
templates/personal/: rpg_core.html  rpg_error.html  rpg_main.html  rpg_results.html  rpgs.html
templates/projects/: accalia.html  elcm.html  empyrean.html  marked_for_death.html  packmates.html  window.html
templates/writing/: birth.html  finalstraw.html  landthought.html
writing/: index.html
writing/accalia/: index.html
(+5 files in other folders)
